tests/golden/defaults/gateway-api/gateway-api/20_gateway_api_policies/validatingadmissionpolicybinding_safe-upgrades.gateway.networking.k8s.io.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.6.2
    gateway.networking.k8s.io/channel: standard
  name: safe-upgrades.gateway.networking.k8s.io
spec:
  matchResources:
    resourceRules:
      - apiGroups:
          - apiextensions.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - customresourcedefinitions
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions:
    - Deny
